# WoWOffsetDumper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  appveyor.yml
cmake/macros/: AutoCollect.cmake
src/: CMakeLists.txt
src/WoWOffsetDumper/: CMakeLists.txt  Dumper.cpp  Dumper.hpp  MirrorFlags.hpp  descriptor_dumper.hpp  main.cpp  offset_dumper.hpp  patterns.hpp
src/clepta/: CMakeLists.txt
src/clepta/clepta/: clepta.hpp  core.hpp  dynamic_function.hpp  dynamic_import.hpp  forward.hpp  memory.hpp  module_list.hpp  modules.hpp  object.hpp  pattern.hpp  pattern_traits.hpp  process.hpp  process_list.hpp  types.hpp  types_win32.hpp
src/common/: CMakeLists.txt  Common.hpp  CompilerDefs.hpp  Define.hpp
src/common/Memory/: MemoryObject.hpp  Process.cpp  Process.hpp
